// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable Row snapshot Tests has icon SelectableRow creates properly 1`] = `
.container {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  min-height: 50px;
  height: undefined;
  flex: 1;
  display: flex;
  flex-direction: row;
  user-select: undefined;
  cursor: pointer;
  align-items: center;
  vertical-align: middle;
  background-color: #FFFFFF;
  border: none;
  width: 100%;
}

.container:hover {
  background-color: #E6E6E6;
}

.container:focus {
  background-color: #E6E6E6;
}

.mainContentColumn {
  align-self: center;
  flex-direction: column;
}

.text-textStyle {
  color: #696969;
  font-size: 14px;
  font-weight: 700;
  font-family: ABCSocial-Bold, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
  text-decoration-line: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.rightIconColumn {
  display: inline-flex;
  padding-left: 8px;
}

<button
  className="container"
  onClick={[Function]}
>
  <div
    className="mainContentColumn"
  >
    <span>
      <div
        className="text-textStyle"
      >
        text1
      </div>
    </span>
  </div>
  <div
    className="rightIconColumn"
  >
    <div>
      SVG
    </div>
  </div>
</button>
`;

exports[`Selectable Row snapshot Tests no icon SelectableRow creates properly 1`] = `
.container {
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  min-height: 50px;
  height: undefined;
  flex: 1;
  display: flex;
  flex-direction: row;
  user-select: undefined;
  cursor: pointer;
  align-items: center;
  vertical-align: middle;
  background-color: #FFFFFF;
  border: none;
  width: 100%;
}

.container:hover {
  background-color: #E6E6E6;
}

.container:focus {
  background-color: #E6E6E6;
}

.mainContentColumn {
  align-self: center;
  flex-direction: column;
}

.text-textStyle {
  color: #696969;
  font-size: 14px;
  font-weight: 700;
  font-family: ABCSocial-Bold, sans-serif;
  display: inline;
  white-space: inherit;
  text-align: undefined;
  text-decoration-line: undefined;
}

.text-textStyle:hover {
  cursor: pointer;
}

.rightActionColumn {
  margin-left: 8px;
}

<button
  className="container"
  onClick={[Function]}
>
  <div
    className="mainContentColumn"
  >
    <span>
      <div
        className="text-textStyle"
      >
        text1
      </div>
    </span>
  </div>
  <div
    className="rightActionColumn"
  />
</button>
`;
